<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableRow
        android:id="@+id/firstnameRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firstNameTxt"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/fistnameTx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" >

            <requestFocus />
        </EditText>

    </TableRow>

    <TableRow
        android:id="@+id/lastnameRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lastNameLbl"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/lastNameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

    </TableRow>

    <TableRow
        android:id="@+id/emailRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emailLbl"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/emailTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress" />

    </TableRow>

    <TableRow
        android:id="@+id/cellphoneRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phonenumberLb"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/phonenumberTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone" />

    </TableRow>

    <TableRow
        android:id="@+id/addressRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addressTxt"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/homeAddressTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

    </TableRow>

    <TableRow
        android:id="@+id/btnRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSave" />

    </TableRow>

</TableLayout>
